--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,13 +1,31 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Timetracker</title>
-    <%= csrf_meta_tags %>
-    <%= stylesheet_link_tag    'application' %>
-    <%= javascript_include_tag 'application' %>
-  </head>
+<head>
+  <title>Timetracker</title>
+  <%= csrf_meta_tags %>
+  <%= stylesheet_link_tag    'application' %>
+  <%= javascript_include_tag 'application' %>
+</head>
+<body>
 
-  <body>
-    <%= yield %>
-  </body>
+  <header class="container">
+    <nav class="navbar navbar-default">
+      <div class="navbar-header">
+        <%= link_to "Time Tracker", root_path, class: "navbar-brand" %>
+      </div>
+    </nav>
+  </header>
+  
+  <div class="container">
+
+    <% flash.each do |name, msg| %>
+      <%= content_tag :div, msg, :id => "flash_#{name}" %>
+    <% end %>
+
+    <div class="row">
+      <%= yield %>
+    </div>
+
+  </div>
+</body>
 </html>
