--- a/app/assets/stylesheets/_layout.scss
+++ b/app/assets/stylesheets/_layout.scss
@@ -6,7 +6,8 @@ body {
   @extend .alert;
   @extend .alert-success;
 }
-#flash_error, #flash_alert {
+#flash_error,
+#flash_alert {
   @extend .alert;
   @extend .alert-danger;
 }
